--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <div id="root"></div>
